United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7008325 CodeCache exhausted on sparc starting from hs20b04
7008325 : CodeCache exhausted on sparc starting from hs20b04

Details
Type:
Bug
Submit Date:
2010-12-21
Status:
Closed
Updated Date:
2012-02-01
Project Name:
JDK
Resolved Date:
2011-03-08
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
x86
Priority:
P3
Resolution:
Fixed
Affected Versions:
hs20
Fixed Versions:
hs20

Related Reports
Backport:
Backport:
Relates:
Relates:

Sub Tasks

Description
Tests
nsk/stress/jck60/jck60026
bigapps/runThese/stability
run out of native resources and fails with java.lang.OutOfMemoryError: requested 1824 bytes for CodeCache: no room for vtable chunks.

There were no such failure since codecache parameter for runThese was increased to 64M.
It seems like VM require more native.

Issue is appears only on sparcs.

Report:
(http://sqeweb.sfbay/nfs/results/vm/gtee/HSX/PIT/VM/hs20/04/jdk7b122/product/bigapps/solaris-sparcv9/server/comp/solaris-sparcv9_bigapps__server_comp_runThese/runThese/hs_err_pid28881.log)

;; Using jvm: "/export/local/common/jdk/baseline/solaris-sparcv9/jre/lib/sparcv9/server/libjvm.so"
#
# A fatal error has been detected by the Java Runtime Environment:
#
# java.lang.OutOfMemoryError: requested 1824 bytes for CodeCache: no room for vtable chunks. Out of swap space?
#
#  Internal Error (vtableStubs.cpp:63), pid=28881, tid=330
#  Error: CodeCache: no room for vtable chunks
#
# JRE version: 7.0-b122
# Java VM: Java HotSpot(TM) 64-Bit Server VM (20.0-b04-internal-201012170509.et151817.hs20b04-ci compiled mode solaris-sparc compressed oops)
# If you would like to submit a bug report, please visit:
#   http://java.sun.com/webapps/bugreport/crash.jsp
#

See testrun example:
http://sqeweb.sfbay/nfs/results/vm/gtee/HSX/PIT/VM/hs20/04/jdk7b122/product/bigapps/solaris-sparcv9/server/comp/solaris-sparcv9_bigapps__server_comp_runThese/analysis.html
It does not look like CodeCache is exhausted:

Code Cache  [0xffffffff77800000, 0xffffffff7b800000, 0xffffffff7b800000)
 total_blobs=40649 nmethods=16532 adapters=501 free_code_cache=770368

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/jdk7/hotspot-comp/hotspot/rev/51bd2d261853
                                     
2010-12-29
PUBLIC COMMENTS

The bug is that Compile::ScheduleAndBundle calls
init_scratch_buffer_blob and later clear_scratch_buffer_blob to reset
_scratch_buffer_blob and _scratch_locs_memory (setting to NULL).  But
the CompilerWrapper destructor only frees the _scratch_buffer_blob if
it's non-null resulting in a CodeCache memory leak.

The fix is to remove clear_scratch_buffer_blob completely and let
init_scratch_buffer_blob free and allocate a new blob if required.

Additionally I added some code that prints the largest free block in
CodeCache::print_bounds (as found in the hs_err file).
                                     
2010-12-29
EVALUATION

The bug is that Compile::ScheduleAndBundle calls init_scratch_buffer_blob and later clear_scratch_buffer_blob to reset _scratch_buffer_blob and _scratch_locs_memory (setting to NULL).  But the CompilerWrapper destructor only frees the _scratch_buffer_blob if it's non-null resulting in a CodeCache memory leak.
                                     
2010-12-23
SUGGESTED FIX

The fix is to remove clear_scratch_buffer_blob completely and let init_scratch_buffer_blob free and allocate a new blob if required.
                                     
2010-12-23



Hardware and Software, Engineered to Work Together