7008325: CodeCache exhausted on sparc starting from hs20b04

Remove clear_scratch_buffer_blob and let init_scratch_buffer_blob free and allocate a new blob if required.

Reviewed-by: twisti